# libfreenect

c/: CMakeLists.txt
c/Modules/: FindCUDA.cmake
c/cuKinect/: CMakeLists.txt  cuKinect.cu
